[package]
name = "cron-poll-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = "0.4.39"
croner = "2.1.0"
dotenv = "0.15.0"
include_dir = "0.7.4"
lazy_static = "1.5.0"
rusqlite = "0.32.1"
rusqlite_migration = { version = "1.3.1", features = ["from-directory"] }
serde = "1.0.217"
serde_yml = "0.0.12"
serenity = "0.12.4"
tokio = { version = "1.42.0", features = ["full"] }
uuid = {version = "1.13.1", features = ["v4", "serde"]}
