[profile.release]
panic = "abort"

[package]
name = "cron-poll-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
chrono = "0.4.39"
croner = "2.1.0"
dotenv = "0.15.0"
futures = "0.3.31"
include_dir = "0.7.4"
lazy_static = "1.5.0"
poise = "0.6.1"
rusqlite_migration = { version = "1.3.1", features = ["from-directory"] }
serde = "1.0.217"
serde_yml = "0.0.12"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "sqlx-postgres", "uuid", "chrono"] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = {version = "1.13.1", features = ["v4", "serde"]}
